[project]
name = "saas-admin-eval"
version = "0.1.0"
description = "SaaS Admin Safety Benchmark — HUD eval environment"
requires-python = ">=3.11"
dependencies = [
    "hud-python>=0.5.33",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]